[package]
name = "bpxe"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"


[dependencies]
# Used to parse BPMN to a typed schema
strong-xml = "0.6.0"
# Used to 'normalize' BPMN XML before parsing
# due to deficiencies of strong-xml
sxd-document = "0.3.2"
thiserror = "1.0"
num-bigint = "0.3.1"
# Used for schema traversals
downcast-rs = "1.2"
derive_more = "0.99.11"
dyn-clone = "1.0.4"
tia = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.12"
serde = { version = "1.0.119", features = ["derive"] }

[dev-dependencies]
async-trait = "0.1"
