[package]
name = "bpxe"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"


[dependencies]
# Used to parse BPMN to a typed schema
strong-xml = "0.6.0"
# Used to 'normalize' BPMN XML before parsing
# due to deficiencies of strong-xml
sxd-document = "0.3.2"
thiserror = "1.0"
num-bigint = { version = "0.3.1", features = ["serde"] }
# Used for schema traversals
downcast-rs = "1.2"
# Used for casting between traits
intertrait = "0.2"
# Used for intertrait
linkme = "0.2"
derive_more = "0.99.11"
dyn-clone = "1.0.4"
tia = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.12"
serde = { version = "1.0.119", features = ["derive"] }
smallvec = { version = "1.6.1", features = ["serde"] }
rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }

[dev-dependencies]
async-trait = "0.1"
serde_yaml = "0.8"

[features]
default = ["rhai"]
