[package]
name = "bpxe-bpmn-schema"
version = "0.2.1-dev"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["bpmn", "workflow"]
repository = "https://github.com/bpxe/bpxe"
readme = "README.md"
description = "Business Process eXecution Engine's BPMN schema"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "^0.2.1-dev"}
thiserror = "1.0"
# Used to parse BPMN to a typed schema
strong-xml = "0.6.0"
num-bigint = { version = "0.3.1", features = ["serde"] }
# Used for schema traversals
downcast-rs = "1.2"
dyn-clone = "1.0.4"
tia = "1.0.1"
syn = "1.0.60"
serde = { version = "1.0.119", features = ["derive"] }
derive_more = "0.99.11"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.6"
