[package]
name = "bpxe"
version = "0.2.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["bpmn", "workflow"]
repository = "https://github.com/bpxe/bpxe"
readme = "README.md"
description = "Business Process eXecution Engine"

[dependencies]
bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "0.2.0" }
# Used to parse BPMN to a typed schema
strong-xml = "0.6.0"
# Used to 'normalize' BPMN XML before parsing
# due to deficiencies of strong-xml
sxd-document = "0.3.2"
thiserror = "1.0"
# Used for schema traversals
downcast-rs = "1.2"
dyn-clone = "1.0.4"
tia = "1.0.0"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3.12"
serde = { version = "1.0.119", features = ["derive"] }
smallvec = { version = "1.6.1", features = ["serde"] }
rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
async-trait = "0.1"
factory = "0.1.2"
num-bigint = { version = "0.3.1", features = ["serde"] }
serde_json = "1.0"
streamunordered = "0.5.1"
derive_more = "0.99.11"
instant = "0.1.9"

[dev-dependencies]
serde_yaml = "0.8"
toml = "0.5"
ron = "0.6"
rmp-serde = "0.15"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["rhai"]

[lib]
crate-type = ["cdylib","lib"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.1"
features = ["macros","rt","time","sync"]
