[package]
name = "bpxe"
version = "0.2.1-dev"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["bpmn", "workflow"]
repository = "https://github.com/bpxe/bpxe"
readme = "README.md"
description = "Business Process eXecution Engine"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
bpxe-bpmn-schema = { path = "../bpxe-bpmn-schema", version = "^0.2.1-dev"}
bpxe-internal-macros = { path = "../bpxe-internal-macros", version = "^0.2.1-dev"}
# Used to parse BPMN to a typed schema
strong-xml = "0.6.0"
# Used to 'normalize' BPMN XML before parsing
# due to deficiencies of strong-xml
sxd-document = "0.3.2"
thiserror = "1.0"
# Used for schema traversals
downcast-rs = "1.2"
dyn-clone = "1.0.4"
tia = "1.0.0"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3.12"
serde = { version = "1.0.119", features = ["derive"] }
smallvec = { version = "1.6.1", features = ["serde"] }
rhai = { version = "0.19.10", features = ["sync", "serde"], optional = true }
async-trait = "0.1"
factory = "0.1.2"
num-bigint = { version = "0.3.1", features = ["serde"] }
serde_json = "1.0"
streamunordered = "^0.5.2"
derive_more = "0.99.11"
instant = "0.1.9"
wasm-rs-dbg = "^0.1.2"
wasm-rs-async-executor = { version = "^0.8.1", features = ["debug"] }
num-traits = "0.2.14"

[dev-dependencies]
serde_yaml = "0.8"
toml = "0.5"
ron = "0.6"
rmp-serde = "0.15"
pin-project = "1"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.6"
wasm-rs-shared-channel = "0.1.0"
wasm-bindgen-futures = "0.4.20"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "DedicatedWorkerGlobalScope"] }
tokio = { version = "1.1", features = ["macros", "time", "sync"] }

[target.wasm32-wasi.dependencies]
tokio = { version = "1.1", features = ["macros", "time", "sync"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["rhai"]
